# rtc_telemetry

./: .clang-format  .gitignore  CMakeLists.txt  README.md
depend/libdatachannel/lib/: libdatachannel.so.0.24
src/: message.hpp  receiver.cpp  receiver.hpp  sdp_file.hpp  sender.cpp  sender.hpp  video_reader.cpp  video_reader.hpp
